assets/styles/series.scss
/* ... */
.episode__cards > a:has(.mark-this-episode-as-watched) ~ a .mark-this-episode-as-watched {
    display: none;
}

@keyframes episode-loading {
    0% {
        background-color: hsl(from var(--ardoise-30) h s l / .75);
        height: .5rem;
    }
    50% {
        background-color: var(--orange);
        height: 5rem;
    }
    100% {
        background-color: hsl(from var(--ardoise-30) h s l / .75);
        height: .5rem;
    }
}

@media (width < 32rem) {
    .seasons {
        .season {
            flex-direction: column;
            height: fit-content;

            .poster {
                aspect-ratio: 1;
                border-radius: 1rem 1rem 0 0;
                height: unset;
                width: 100%;

                img {
                    border-radius: 1rem 1rem 0 0;
                }
            }

            .infos {
                border-radius: 0 0 1rem 1rem;
                height: unset;
                justify-content: center;
                min-height: 15rem;
            }
        }
    }
}

.season-stuff {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    gap: .5rem;
    justify-content: center;

    h2 {
        background-color: transparent;
        padding-inline: 1rem;
        width: 100%;
    }

    .user-actions {
        border-radius: 5rem;
        flex-direction: row;
        padding: .5rem;

        .separator {
            align-items: center;
            background-color: transparent;
            color: var(--ardoise-10);
            display: flex;
            height: 2rem;
            justify-content: center;
            width: 2rem;

            svg {
                transform: scale(0.5);
            }
        }

        .size-item {
            align-items: center;
            background-color: hsla(from var(--ardoise-90) h s l / .2);
            border-radius: .25rem;
            color: var(--ardoise-10);
            cursor: pointer;
            display: flex;
            height: 2rem;
            justify-content: center;
            transition: background-color 0.3s linear;
            width: 2rem;

            &.active {
                background-color: var(--user-episode-actions);
            }

            &:hover {
                background-color: var(--orange-50);
            }
        }

        .ar-item {
            align-items: center;
            background-color: hsla(from var(--ardoise-90) h s l / .2);
            border-radius: .25rem;
            color: var(--ardoise-10);
            cursor: pointer;
            display: flex;
            height: 2rem;
            justify-content: center;
            transition: background-color 0.3s linear;
            width: 2rem;

            &.active {
                background-color: var(--user-episode-actions);
            }

            &:hover {
                background-color: var(--orange-50);
            }
        }

        .edit-episode-infos {
            align-items: center;
            background-color: hsla(from var(--ardoise-90) h s l / .2);
            border-radius: .25rem;
            color: var(--ardoise-10);
            cursor: pointer;
            display: flex;
            height: 2rem;
            justify-content: center;
            transition: background-color 0.3s linear;
            width: 2rem;

            &:hover {
                background-color: var(--orange-50);
            }
        }

        svg {
            /*transform: scale(1.75);*/
            height: 1.5rem;
            width: 1.5rem;
        }
    }

    .user-actions {
        > div {
            &:first-child {
                border-bottom-left-radius: 5rem;
                border-top-left-radius: 5rem;
            }

            &:last-child {
                border-bottom-right-radius: 5rem;
                border-top-right-radius: 5rem;
            }
        }
    }

    .user-actions {
        > div {
            &:first-child:not(.wrapper) {
                padding-inline-end: .25rem;
                padding-inline-start: .75rem;
                width: 2.5rem;
            }

            &:last-child:not(.wrapper) {
                padding-inline-end: .75rem;
                padding-inline-start: .25rem;
                width: 2.5rem;
            }
        }
    }
}
/* ... */

